--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,32 @@
-/all
-/**/target/
-/.idea/
-.svn
-.classpath
-.project
+#java
+*.class
+
+#package file
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+#maven ignore
+target/
+build/
+
+#Intellij idea
+.idea/
+/idea/
+*.ipr
 *.iml
+*.iws
+
+#eclipse ignore
+.settings/
+.project
+.classpatch
+
+# temp file
 *.log
+*.cache
+*.diff
+*.patch
+*.tmp
